# src/main/java/com/standofit/back/api/execution/dto/SessionDTO.java
@@ -1,141 +1,0 @@
-package com.standofit.back.api.execution.dto;
-
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonValue;
-import io.swagger.v3.oas.annotations.media.Schema;
-import jakarta.validation.constraints.*;
-import java.time.OffsetDateTime;
-import java.util.UUID;
-
-public class SessionDTO {
-
-  @JsonProperty("id")
-  private UUID id;
-
-  @JsonProperty("dayId")
-  private UUID dayId;
-
-  @Schema(hidden = true)
-  public enum StatusEnum {
-    IN_PROGRESS("IN_PROGRESS"),
-    COMPLETED("COMPLETED"),
-    CANCELLED("CANCELLED");
-
-    private String value;
-
-    StatusEnum(String value) {
-      this.value = value;
-    }
-
-    @JsonValue
-    public String getValue() {
-      return value;
-    }
-
-    @Override
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static StatusEnum fromValue(String value) {
-      for (StatusEnum b : StatusEnum.values()) {
-        if (b.value.equals(value)) {
-          return b;
-        }
-      }
-      throw new IllegalArgumentException("Unexpected value '" + value + "'");
-    }
-  }
-
-  @JsonProperty("status")
-  private StatusEnum status;
-
-  @JsonProperty("notes")
-  private String notes;
-
-  @JsonProperty("createdAt")
-  private OffsetDateTime createdAt;
-
-  @JsonProperty("updatedAt")
-  private OffsetDateTime updatedAt;
-
-  public SessionDTO id(UUID id) {
-    this.id = id;
-    return this;
-  }
-
-  public UUID getId() {
-    return id;
-  }
-
-  public void setId(UUID id) {
-    this.id = id;
-  }
-
-  public SessionDTO dayId(UUID dayId) {
-    this.dayId = dayId;
-    return this;
-  }
-
-  public UUID getDayId() {
-    return dayId;
-  }
-
-  public void setDayId(UUID dayId) {
-    this.dayId = dayId;
-  }
-
-  public SessionDTO status(StatusEnum status) {
-    this.status = status;
-    return this;
-  }
-
-  public StatusEnum getStatus() {
-    return status;
-  }
-
-  public void setStatus(StatusEnum status) {
-    this.status = status;
-  }
-
-  public SessionDTO notes(String notes) {
-    this.notes = notes;
-    return this;
-  }
-
-  public String getNotes() {
-    return notes;
-  }
-
-  public void setNotes(String notes) {
-    this.notes = notes;
-  }
-
-  public SessionDTO createdAt(OffsetDateTime createdAt) {
-    this.createdAt = createdAt;
-    return this;
-  }
-
-  public OffsetDateTime getCreatedAt() {
-    return createdAt;
-  }
-
-  public void setCreatedAt(OffsetDateTime createdAt) {
-    this.createdAt = createdAt;
-  }
-
-  public SessionDTO updatedAt(OffsetDateTime updatedAt) {
-    this.updatedAt = updatedAt;
-    return this;
-  }
-
-  public OffsetDateTime getUpdatedAt() {
-    return updatedAt;
-  }
-
-  public void setUpdatedAt(OffsetDateTime updatedAt) {
-    this.updatedAt = updatedAt;
-  }
-}
